# OS

./: .env  AppConfig.cpp  AppConfig.h  ArgParser.cpp  ArgParser.h  CMakeLists.txt  Funciones_usuarios.cpp  Funciones_usuarios.h  Menu.h  PERFILES.txt  ProfilesFunc.cpp  ProfilesFunc.h  README.md  REFACTORING_SUMMARY.md  Texto.cpp  Texto.h  UI_Func.cpp  UI_Func.h  USUARIOS.txt  Users.cpp  Users.h  UsersFunc.cpp  UsersFunc.h  centro.cpp  centro.h  crud.cpp  crud.h  interfaz.cpp  main.cpp  usuarios.cpp  usuarios.h
administrar_usuarios/: CMakeLists.txt  Makefile  cmake_install.cmake
administrar_usuarios/include/: admin_usuarios.h
administrar_usuarios/source/: admin_usuarios.cpp
data/: PERFILES.txt  USUARIOS.txt
data/libros/: An Inquiry into the Nature and Causes of the Wealth of Nations.txt  Aristotle's History of Animals.txt  The Colleges of Oxford- Their History and Traditions.txt  The Common Law.txt  The English Constitution.txt  The History of the Peloponnesian War.txt  The Life of Florence Nightingale, vol. 2 of 2.txt  The Online World.txt  The Progress of Invention in the Nineteenth Century.txt  The Social Contract & Discourses.txt  The Works of Edgar Allan Poe.txt
include/: AppConfig.h  ArgParser.h  crud.h  interfaz.h  usuarios.h
include/menus/: menu_admin.h  menu_conteo.h  menu_funcion.h  menu_indice.h  menu_indiceinvertido.h  menu_matriz.h  menu_palindromo.h  menu_principal.h
include/process_tools/: process_manager.h
include/utils/: input_utils.h  string_utils.h
indice_invertido/: .env  CMakeLists.txt  Makefile  cmake_install.cmake  indice_invertido
indice_invertido/include/: crear_indice.h
indice_invertido/src/: crear_indice.cpp  indice_invertido.cpp  main.cpp
invertir/: main.cpp  prueba.idx
prog_extra/: .env  CMakeLists.txt  Makefile  cmake_install.cmake  multi
prog_extra/admin_tool/: CMakeLists.txt
prog_extra/admin_tool/include/: admin_tool.h
prog_extra/admin_tool/src/: admin_tool.cpp
prog_extra/data/: A3x3.txt  A4x4.txt  B3.txt  B3x3.txt  B4.txt  B4x4.txt
prog_extra/include/: menu_matriz.h  multi_matrix.h
prog_extra/source/: menu_matriz.cpp  multi_matrix.cpp
src/: AppConfig.cpp  ArgParser.cpp  crud.cpp  interfaz.cpp  main.cpp  users_auth.cpp  usuarios.cpp  usuarios.cpp.backup
src/menus/: menu_admin.cpp  menu_conteo.cpp  menu_funcion.cpp  menu_indice.cpp  menu_indiceinvertido.cpp  menu_matriz.cpp  menu_palindromo.cpp  menu_principal.cpp
src/process_tools/: process_manager.cpp
src/utils/: input_utils.cpp  string_utils.cpp
